update regex to remove dollar sign

--- a/.github/workflows/solidity-foundry.yml
+++ b/.github/workflows/solidity-foundry.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Run Forge snapshot
         if: ${{ !contains(fromJson('["vrf"]'), matrix.product) }}
         run: |
-          forge snapshot --nmt "^testFuzz_.*$$" --check gas-snapshots/${{ matrix.product }}.gas-snapshot
+          forge snapshot --nmt "testFuzz_\w{1,}?" --check gas-snapshots/${{ matrix.product }}.gas-snapshot
         id: snapshot
         working-directory: contracts
         env:
