--- a/core/config/docs/core.toml
+++ b/core/config/docs/core.toml
@@ -90,10 +90,6 @@ LeaseRefreshInterval = '1s' # Default
 UniConn = true # Default
 # Logging toggles verbose logging of the raw telemetry messages being sent.
 Logging = false # Default
-# ServerPubKey is the public key of the telemetry server.
-ServerPubKey = 'test-pub-key' # Example
-# URL is where to send telemetry.
-URL = 'https://prom.test' # Example
 # BufferSize is the number of telemetry messages to buffer before dropping new ones.
 BufferSize = 100 # Default
 # MaxBatchSize is the maximum number of messages to batch into one telemetry request.
@@ -104,6 +100,15 @@ SendInterval = '500ms' # Default
 SendTimeout = '10s' # Default
 # UseBatchSend toggles sending telemetry to the ingress server using the batch client.
 UseBatchSend = true # Default
+
+[[TelemetryIngressEndpoint]]
+Network = 'EVM' # Example
+# Chain ID for the endpoint
+ChainID = 111551111 # Example
+# ServerPubKey is the public key of the telemetry server.
+ServerPubKey = 'test-pub-key-111551111-evm' # Example
+# URL is where to send telemetry.
+URL = 'http://localhost-111551111-evm:9000' # Example
 
 [AuditLogger]
 # Enabled determines if this logger should be configured at all
