--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -418,6 +418,7 @@ jobs:
     needs: [eth-smoke-tests]
     runs-on: ubuntu20.04-16cores-64GB
     name: ETH Smoke Tests Go Mod Cache
+    continue-on-error: true
     steps:
       - name: Checkout the repo
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
