--- a/.github/workflows/goreleaser-build-publish-develop.yml
+++ b/.github/workflows/goreleaser-build-publish-develop.yml
@@ -4,9 +4,26 @@ on:
   push:
     branches:
       - develop
+  workflow_dispatch:
+    inputs:
+      git_ref:
+        description: "Git ref (commit SHA, branch name, tag name, etc.) to checkout"
+        required: true
+
+env:
+  GIT_REF: ${{ github.event.inputs.git_ref || github.ref }}
 
 jobs:
   push-chainlink-develop-goreleaser:
+    strategy:
+      matrix:
+        image:
+          - name: ""
+            dockerfile: "core/chainlink.Dockerfile"
+            tag-suffix: ""
+          - name: "plugins"
+            dockerfile: "plugins/chainlink.Dockerfile"
+            tag-suffix: "-plugins"
     runs-on:
       labels: ubuntu20.04-16cores-64GB
     outputs:
@@ -19,6 +36,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+        with:
+          ref: ${{ env.GIT_REF }}
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@5fd3084fc36e372ff1fff382a39b10d03659f355 # v2.2.0
         with:
@@ -31,6 +50,8 @@ jobs:
         with:
           enable-docker-publish: "true"
           docker-registry: ${{ secrets.AWS_DEVELOP_ECR_HOSTNAME }}
+          docker-image-tag-suffix: ${{ matrix.image.tag-suffix }}
+          dockerfile: ${{ matrix.image.dockerfile }}
           enable-goreleaser-snapshot: "true"
           goreleaser-exec: ./tools/bin/goreleaser_wrapper
           goreleaser-config: .goreleaser.develop.yaml
@@ -67,7 +88,7 @@ jobs:
         uses: smartcontractkit/chainlink-github-actions/github-app-token-issuer@main
         with:
           url: ${{ secrets.GATI_LAMBDA_FUNCTION_URL }}
-      - name: 'Dispatch Workflow: E2E Functional Tests'
+      - name: "Dispatch Workflow: E2E Functional Tests"
         id: dispatch-workflow-e2e-functional-tests
         shell: bash
         run: |
