--- a/.goreleaser.develop.yaml
+++ b/.goreleaser.develop.yaml
@@ -4,6 +4,7 @@ project_name: chainlink
 env:
   - ZIG_EXEC={{ if index .Env "ZIG_EXEC"  }}{{ .Env.ZIG_EXEC }}{{ else }}zig{{ end }}
   - IMAGE_PREFIX={{ if index .Env "IMAGE_PREFIX"  }}{{ .Env.IMAGE_PREFIX }}{{ else }}localhost:5001{{ end }}
+  - IMAGE_TAG_SUFFIX={{ if index .ENV "IMAGE_TAG_SUFFIX" }}{{ .Env.IMAGE_TAG_SUFFIX }}{{ else }}{{ end }}
   - IMAGE_LABEL_DESCRIPTION="node of the decentralized oracle network, bridging on and off-chain computation"
   - IMAGE_LABEL_LICENSES="MIT"
   - IMAGE_LABEL_SOURCE="https://github.com/smartcontractkit/{{ .ProjectName }}"
@@ -77,8 +78,8 @@ dockers:
       - "--label=org.opencontainers.image.version={{ .Env.CHAINLINK_VERSION }}"
       - "--label=org.opencontainers.image.url={{ .Env.IMAGE_LABEL_SOURCE }}"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-root-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-root-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-root-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-root-amd64"
   - id: root-linux-arm64
     dockerfile: core/chainlink.goreleaser.Dockerfile
     use: buildx
@@ -99,8 +100,8 @@ dockers:
       - "--label=org.opencontainers.image.version={{ .Env.CHAINLINK_VERSION }}"
       - "--label=org.opencontainers.image.url={{ .Env.IMAGE_LABEL_SOURCE }}"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-root-arm64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-root-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-root-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-root-arm64"
   - id: linux-amd64
     dockerfile: core/chainlink.goreleaser.Dockerfile
     use: buildx
@@ -122,8 +123,8 @@ dockers:
       - "--label=org.opencontainers.image.version={{ .Env.CHAINLINK_VERSION }}"
       - "--label=org.opencontainers.image.url={{ .Env.IMAGE_LABEL_SOURCE }}"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-amd64"
   - id: linux-arm64
     dockerfile: core/chainlink.goreleaser.Dockerfile
     use: buildx
@@ -145,27 +146,27 @@ dockers:
       - "--label=org.opencontainers.image.version={{ .Env.CHAINLINK_VERSION }}"
       - "--label=org.opencontainers.image.url={{ .Env.IMAGE_LABEL_SOURCE }}"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-arm64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-arm64"
 
 # See https://goreleaser.com/customization/docker_manifest/
 docker_manifests:
-  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-root"
+  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-root"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-root-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-root-arm64"
-  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-root"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-root-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-root-arm64"
+  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-root"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-root-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-root-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-root-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-root-arm64"
   - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop-arm64"
-  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:develop{{ .Env.IMAGE_TAG_SUFFIX }}-arm64"
+  - name_template: "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}"
     image_templates:
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-amd64"
-      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}-arm64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-amd64"
+      - "{{ .Env.IMAGE_PREFIX }}/{{ .ProjectName }}-develop:sha-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}-arm64"
 
 # See https://goreleaser.com/customization/docker_sign/
 docker_signs:
@@ -183,7 +184,7 @@ checksum:
   name_template: "checksums.txt"
 
 snapshot:
-  name_template: "{{ .Env.CHAINLINK_VERSION }}-{{ .ShortCommit }}"
+  name_template: "{{ .Env.CHAINLINK_VERSION }}-{{ .ShortCommit }}{{ .Env.IMAGE_TAG_SUFFIX }}"
 
 changelog:
   sort: asc
