--- a/core/scripts/functions/templates/oracle.toml
+++ b/core/scripts/functions/templates/oracle.toml
@@ -35,6 +35,8 @@ requestTimeoutCheckFrequencySec = 10
 requestTimeoutSec = 300
 maxRequestSizesList = [30_720, 51_200, 102_400, 204_800, 512_000, 1_048_576, 2_097_152, 3_145_728, 5_242_880, 10_485_760]
 maxSecretsSizesList = [10_240, 20_480, 51_200, 102_400, 307_200, 512_000, 1_048_576, 2_097_152]
+minimumSubscriptionBalanceLink = 0.1
+
 
   [pluginConfig.OnchainAllowlist]
   blockConfirmations = 1
