--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -807,7 +807,7 @@ jobs:
 
   testnet-smoke-tests-notify:
     name: Live Testnet Start Slack Thread
-    if: ${{ always() && !cancelled() }}
+    if: ${{ needs.*.result != 'skipped' }}
     environment: integration
     outputs:
       thread_ts: ${{ steps.slack.outputs.thread_ts }}
@@ -859,7 +859,7 @@ jobs:
 
   testnet-smoke-tests-results:
     name: Post Live Testnet Smoke Test Results
-    if: ${{ always() && !cancelled() }}
+    if: ${{ needs.*.result != 'skipped' }}
     environment: integration
     permissions:
       checks: write
