--- a/core/chains/evm/config/toml/defaults/Scroll_Sepolia.toml
+++ b/core/chains/evm/config/toml/defaults/Scroll_Sepolia.toml
@@ -4,7 +4,9 @@ LogPollInterval = '3s'
 MinIncomingConfirmations = 1
 # Scroll only emits blocks when a new tx is received, so this method of liveness detection is not useful
 NoNewHeadsThreshold = '0'
-OCR.ContractConfirmations = 1
+
+[OCR]
+ContractConfirmations = 1
 
 [GasEstimator]
 Mode = 'L2Suggested'
