--- a/.github/workflows/on-demand-ocr-soak-test.yml
+++ b/.github/workflows/on-demand-ocr-soak-test.yml
@@ -11,6 +11,7 @@ on:
           - "OPTIMISM_GOERLI"
           - "ARBITRUM_GOERLI"
           - "CELO_ALFAJORES"
+          - "CELO_BAKLAVA"
           - "CELO_MAINNET"
           - "BASE_GOERLI"
           - "BASE_MAINNET"
