--- a/core/chains/evm/config/toml/defaults/Celo_Baklava.toml
+++ b/core/chains/evm/config/toml/defaults/Celo_Baklava.toml
@@ -4,7 +4,9 @@ FinalityDepth = 1
 LogPollInterval = '5s'
 MinIncomingConfirmations = 1
 NoNewHeadsThreshold = '1m'
-OCR.ContractConfirmations = 1
+
+[OCR]
+ContractConfirmations = 1
 
 [GasEstimator]
 PriceDefault = '5 gwei'
