--- a/.github/workflows/ci-chaincli.yml
+++ b/.github/workflows/ci-chaincli.yml
@@ -20,7 +20,7 @@ jobs:
           go-version-file: "core/scripts/go.mod"
           cache: true
       - name: Build binary for chaincli
-        run: go build ../core/scripts/chaincli
+        run: go build $GITHUB_WORKSPACE/core/scripts/chaincli
       - name: golangci-lint
         uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc # v3.7.0
         with:
